Made project ready for Maven Central deployment