@@ -7,6 +7,8 @@
   <packaging>pom</packaging>
   <name>Inference API - Parent</name>
 
+  <description>An inference layer for RDF and OWL</description>
+
   <organization>
     <name>Smart Data Analytics (SDA) Research Group</name>
     <url>http://sda.tech/</url>
@@ -23,6 +25,13 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+
+  <scm>
+    <connection>scm:git:https://github.com/SANSA-Stack/SANSA-Inference.git</connection>
+    <url>https://github.com/SANSA-Stack/SANSA-Inference</url>
+    <developerConnection>scm:git:https://github.com/SANSA-Stack/SANSA-Inference.git</developerConnection>
+  </scm>
+
 
   <developers>
     <developer>
@@ -171,12 +180,12 @@
       <dependency>
         <groupId>org.jgrapht</groupId>
         <artifactId>jgrapht-core</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.jgrapht</groupId>
         <artifactId>jgrapht-ext</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.gephi</groupId>
@@ -188,7 +197,7 @@
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-core</artifactId>
-            <version>1.10.0</version>
+            <version>1.12.0</version>
         </dependency>
 
       <!-- Test -->
@@ -201,7 +210,7 @@
       <dependency>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest_${scala.binary.version}</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.3</version>
         <scope>test</scope>
       </dependency>
 
@@ -216,7 +225,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>20.0</version>
+        <version>21.0</version>
       </dependency>
 
       <!-- Shapeless lib -->
@@ -296,7 +305,7 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.6.0</version>
+          <version>3.6.1</version>
           <configuration>
             <source>${maven.compiler.source}</source>
             <target>${maven.compiler.target}</target>
@@ -308,7 +317,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>2.20</version>
         </plugin>
 
         <!-- Scalatest -->
@@ -325,7 +334,7 @@
         <plugin>
           <groupId>com.amashchenko.maven.plugin</groupId>
           <artifactId>gitflow-maven-plugin</artifactId>
-          <version>1.3.1</version>
+          <version>1.5.0</version>
         </plugin>
         <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -374,7 +383,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.12</version>
+          <version>3.0.0</version>
           <executions>
             <execution>
               <id>add-source</id>
@@ -393,7 +402,7 @@
         <plugin>
           <groupId>com.versioneye</groupId>
           <artifactId>versioneye-maven-plugin</artifactId>
-          <version>3.11.0</version>
+          <version>3.11.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -403,30 +412,30 @@
         <groupId>com.versioneye</groupId>
         <artifactId>versioneye-maven-plugin</artifactId>
       </plugin>
-      <plugin>
-        <groupId>org.scalastyle</groupId>
-        <artifactId>scalastyle-maven-plugin</artifactId>
-        <version>0.8.0</version>
-        <configuration>
-          <verbose>false</verbose>
-          <failOnViolation>false</failOnViolation>
-          <includeTestSourceDirectory>false</includeTestSourceDirectory>
-          <failOnWarning>false</failOnWarning>
-          <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
-          <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-          <configLocation>scalastyle-config.xml</configLocation>
-          <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
-          <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
-          <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.scalastyle</groupId>-->
+        <!--<artifactId>scalastyle-maven-plugin</artifactId>-->
+        <!--<version>0.8.0</version>-->
+        <!--<configuration>-->
+          <!--<verbose>false</verbose>-->
+          <!--<failOnViolation>false</failOnViolation>-->
+          <!--<includeTestSourceDirectory>false</includeTestSourceDirectory>-->
+          <!--<failOnWarning>false</failOnWarning>-->
+          <!--<sourceDirectory>${basedir}/src/main/scala</sourceDirectory>-->
+          <!--<testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>-->
+          <!--<configLocation>scalastyle-config.xml</configLocation>-->
+          <!--<outputFile>${basedir}/target/scalastyle-output.xml</outputFile>-->
+          <!--<inputEncoding>${project.build.sourceEncoding}</inputEncoding>-->
+          <!--<outputEncoding>${project.reporting.outputEncoding}</outputEncoding>-->
+        <!--</configuration>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<goals>-->
+              <!--<goal>check</goal>-->
+            <!--</goals>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
     </plugins>
   </build>
 
@@ -541,6 +550,114 @@
                       </excludes>
                     </bannedDependencies>
                   </rules>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!-- the profile used for deployment to Sonatype Maven repository -->
+    <profile>
+      <id>ossrh</id>
+      <!--<distributionManagement>-->
+        <!--<repository>-->
+          <!--<id>ossrh</id>-->
+          <!--<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
+        <!--</repository>-->
+      <!--</distributionManagement>-->
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>net.alchim31.maven</groupId>
+            <artifactId>scala-maven-plugin</artifactId>
+            <version>3.2.1</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>compile</goal>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <scalaVersion>${scala.version}</scalaVersion>
+                  <recompileMode>incremental</recompileMode>
+                  <useZincServer>true</useZincServer>
+                  <args>
+                    <arg>-unchecked</arg>
+                    <arg>-deprecation</arg>
+                    <arg>-feature</arg>
+                    <arg>-dependencyfile</arg>
+                    <arg>${project.build.directory}/.scala_dependencies</arg>
+                  </args>
+                  <jvmArgs>
+                    <jvmArg>-Xms1024m</jvmArg>
+                    <jvmArg>-Xmx1024m</jvmArg>
+                    <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
+                    <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
+                    <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
+                  </jvmArgs>
+                  <!--<javacArgs>-->
+                  <!--<javacArg>-source</javacArg>-->
+                  <!--<javacArg>${java.version}</javacArg>-->
+                  <!--<javacArg>-target</javacArg>-->
+                  <!--<javacArg>${java.version}</javacArg>-->
+                  <!--<javacArg>-Xlint:all,-serial,-path</javacArg>-->
+                  <!--</javacArgs>-->
+
+                </configuration>
+              </execution>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>doc-jar</goal>
+                </goals>
+              </execution>
+            </executions>
+
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>verify</phase>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <configuration>
+                  <keyname>AKSW</keyname>
+                  <passphraseServerId>${gpg.keyname}</passphraseServerId>
                 </configuration>
               </execution>
             </executions>
